testsuite/good/intarith3.jl
int main () {
int i = 0 ;
while (i < 10) {
if (i % 2 == 0) printInt(i) ;
i++ ;
}
return 0 ;
}
