testsuite/bad/bad012.jl
int main() {
     int i = foo(true);
     return 0 ;
}

int foo(boolean b) { b = true; }
